Increase a timeout in observable mutex test

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • Hide

      I can't reproduce BF-39816 "in the wild," but I can simulate it by removing the body of the "waiter" thread in `ObservableMutexTest::statsTest`.

      Show
      I can't reproduce BF-39816 "in the wild," but I can simulate it by removing the body of the "waiter" thread in `ObservableMutexTest::statsTest`.
    • N&O 2025-10-13
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We wait for 50 milliseconds in `ObservableMutexTest::waitForChange`, but perhaps it's not always enough.

      Instead, let's wait for a much longer time (10 seconds), but check at geometrically increasing intervals (sleep for 1 ms, 2 ms, ..., 2048 ms, ...).

      If we see any timeouts after this change, then something else is going on.

            Assignee:
            David Goffredo
            Reporter:
            David Goffredo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: