SERVER-111841: increase a timeout in ObservableMutexTest::waitForChange (#42105)

GitOrigin-RevId: 6809568910f772c1bdb7a3971d85ced77ef0ba0c